@@ -1,1 +1,1 @@
-doc/beng.pdf
+build/debug/doc/beng.pdf
