@@ -1,2 +1,2 @@
 include/beng-proxy/*.h usr/include/cm4all/libbeng-proxy-0/beng-proxy
-libcm4all-beng-proxy.pc usr/share/pkgconfig
+build/debug/libcm4all-beng-proxy.pc usr/share/pkgconfig
