@@ -3,6 +3,7 @@ cm4all-beng-proxy (0.5.11) unstable; urgency=low
   * build with autotools
   * use libcm4all-socket, GLib
   * Makefile.am: support out-of-tree builds
+  * added optimized Debian package
 
  --
 
